Thu Nov 12 15:33:54 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkitemfactory.c: cast NULL to GtkItemFactoryCallback to
	ensure proper type (SunPro cc complains)

	* gtk/gtklist.c: removed bogus '*' from "*GTK_CONTAINER_CLASS"

	* gtk/gtktogglebutton.c: use our own draw method so we get proper
	redraws on active state

Thu Nov 12 00:26:13 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkstyle.c (gtk_default_draw_box_gap): use GtkPositionType
	defines.

	* gtk/gtknotebook.c (gtk_notebook_draw_tab): fixed gap_side for
	GTP_POS_RIGHT

Wed Nov 11 19:54:58 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_class_init)
	(gtk_scrolled_window_set_arg) (gtk_scrolled_window_get_arg):
 	added ARG_WINDOW_PLACEMENT

	* gtk/gtkclist.c (size_allocate_columns): resize column if column
 	button > column width and auto_resize is set
	(real_clear) (column_auto_resize) (gtk_clist_optimal_column_width):
 	consider column button width of auto resized columns
	(gtk_clist_parent_set): removed 

	* gtk/gtkctree.c (gtk_ctree_insert_node): call column_auto_resize.
	(auto_resize_columns): auto_resize all columns
	(real_tree_collapse) (gtk_ctree_remove_node): call auto_resize_columns
	(column_auto_resize): respect column button width of auto resized
 	columns

1998-11-10  Martin Baulig  <baulig@merkur.uni-trier.de>

	* gtk/gtkfeatures.h.in (GTK_HAVE_FEATURES_1_1_4): Define this so
	we can check for latest GTK features.

Mon Nov  9 00:39:20 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkenums.h : new enum GtkCornerType 
	* gtk/gtkscrolledwindow.h (struct _GtkScrolledWindow): added
        window_placement.
	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_set_placement): 
        new method to set window_placement.
        (gtk_scrolled_window_viewport_allocate)
        (gtk_scrolled_window_size_allocate): few changes due to
        window_placement.
	* gtk/testgtk.c (remove_selection): fixed while loop.

Sat Nov  7 21:55:00 PST 1998 Manish Singh <yosh@gimp.org>
