@@ -1,3 +1,11 @@
+Fri Nov 13 16:43:36 1998  Lars Hamann  <lars@gtk.org>
+
+	* gtk/gtktogglebutton.c	(gtk_toggle_button_realize): don't
+	show event_window
+ 	(gtk_toggle_button_map) (gtk_toggle_button_unmap): show/hide
+	event_window if draw_indicator is set
+	(gtk_toggle_button_set_mode):
+
 Thu Nov 12 15:33:54 PST 1998 Manish Singh <yosh@gimp.org>
 
 	* gtk/gtkitemfactory.c: cast NULL to GtkItemFactoryCallback to
